# brainhack-fnirs

./: Makefile  README.md  pyproject.toml  requirements.txt
artsiom/: __init__.py  data_loader.py  explore.py  features.py  preprocessing.py  train_baseline.py
fnirs_cognitive_load/: config.py  main.py
fnirs_cognitive_load/preprocessing/: event_dataset.py  preprocessing_pipeline.py  snirf_database_helper.py
notebooks/: simple_vis.ipynb
results/sitting/: RandomForest_loso_results.csv  SVM_loso_results.csv
results/walking/: RandomForest_loso_results.csv  SVM_loso_results.csv
tests/: artsiom.ipynb  test_data.py
tests/preprocessing/: test_bh_mental_database_helper.py
