[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fnirs_cognitive_load"
version = "0.0.1"
description = "This project focuses on developing a real-time classification algorithm to distinguish between high cognitive-load and relaxation states during physical movement. By leveraging high-density mobile functional Near-Infrared Spectroscopy (fNIRS), the study monitors brain activity in participants (N = 60) while they are stationary or walking. The goal is to develop a model that identifies mental fatigue or recovery phases based on hemodynamic responses in specific cortical regions."
authors = [
  { name = "Brainhack Warsaw 2026 project #1" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"
dependencies = [
    "benchnirs>=1.2.5",
    "dotenv>=0.9.9",
    "h5py>=3.16.0",
    "jsonparse>=0.15.1",
    "logging>=0.4.9.6",
    "mne>=1.12.0",
    "mne-qt-browser>=0.7.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyqt5>=5.15.11",
    "pytest>=9.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]


[tool.ruff]
line-length = 99
src = ["fnirs_cognitive_load"]
include = ["pyproject.toml", "fnirs_cognitive_load/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fnirs_cognitive_load"]
force-sort-within-sections = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

