[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fnirs_cognitive_load"
version = "0.0.1"
description = "This project focuses on developing a real-time classification algorithm to distinguish between high cognitive-load and relaxation states during physical movement. By leveraging high-density mobile functional Near-Infrared Spectroscopy (fNIRS), the study monitors brain activity in participants (N = 60) while they are stationary or walking. The goal is to develop a model that identifies mental fatigue or recovery phases based on hemodynamic responses in specific cortical regions."
authors = [
  { name = "Brainhack Warsaw 2026 project #1" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"
dependencies = [
    "h5py>=3.16.0",
    "mne>=1.12.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]


[tool.ruff]
line-length = 99
src = ["fnirs_cognitive_load"]
include = ["pyproject.toml", "fnirs_cognitive_load/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fnirs_cognitive_load"]
force-sort-within-sections = true

